# ml-projects

./: .gitignore  README.md  makefile  pyproject.toml
gpt/: download_webtext.py  plot.py
ml/: pyproject.toml  utils.py
ml/diffusion/: diff.ipynb
ml/diffusion/ddpm-butterflies-128/unet/: config.json
ml/gpt/: OPTIMIZATION_README.md  README_CommonCrawl.md  calculate_common_crawl_params.py  calculate_params.py  count_params.py  dataset.py  download_common_crawl.py  gpt2-webtext-fineweb_text_loss_data.json  model.py  optimization_setup.py  train.py  train_on_common_crawl.py  train_shakespeare.py
ml/gpt/archive/: SA_trick.ipynb  run.ipynb
ml/gpt2/: run.ipynb
ml/gpt2-jax/: main.py  pyproject.toml
optimization/: main.py  pyproject.toml
optimization/gradient/: backprop_fit.py
