[project]
name = "ml-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers>=0.33.1",
    "huggingface>=0.0.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "requests>=2.32.4",
]

[tool.uv.workspace]
members = [
    "optimization",
    "ml",
]
