[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "datasets>=3.2.0",
    "tiktoken>=0.8.0",
    "diffusers>=0.33.1",
    "requests>=2.32.4",
    "huggingface>=0.0.1",
    "ruff>=0.12.0",
    "matplotlib>=3.10.3",
    "pynvml>=12.0.0",
]
